--- a/estilo.css
+++ b/estilo.css
@@ -1,22 +1,68 @@
-@media (min-width:768px) {
-    .container {
-        width: 620px
-    }
+@media (min-width: 768px) {
+  .container {
+    width: 620px;
+  }
 }
 
-@media (min-width:992px) {
-    .container {
-        width: 820px
-    }
+@media (min-width: 992px) {
+  .container {
+    width: 888px;
+  }
 }
 
-@media (min-width:1200px) {
-    .container {
-        width: 1170px
-    }
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.14s,
+    -webkit-box-shadow ease-in-out 0.14s;
+  -o-transition: border-color ease-in-out 0.14s, box-shadow ease-in-out 0.14s;
+  transition: border-color ease-in-out 0.14s, box-shadow ease-in-out 0.14s;
+}
+
+.form-control:focus {
+  border-color: rgba(135, 207, 235, 0.596);
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(102, 175, 233, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px;
+}
+
+.form-control::-moz-placeholder {
+    color: rgba(0, 0, 0, 0.589);
+    opacity: 1
+}
+
+.form-control:-ms-input-placeholder {
+    color: rgba(0, 0, 0, 0.589);
+}
+
+.form-control::-webkit-input-placeholder {
+    color: rgba(0, 0, 0, 0.589);
+}
+
+.form-control::-ms-expand {
+    background-color: transparent;
+    border: 1
 }
 
 ::-webkit-scrollbar {
-    width: 0;
-    height: 0;
+  width: 0;
+  height: 0;
 }
